<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_times"
    android:layout_width="match_parent"
    android:layout_height="110dp"
    android:background="@color/white"
    android:orientation="vertical"
    android:visibility="visible">

    <View
        style="@style/StyleHorizontalLineView"
        android:layout_height="16dp"/>

    <!--第一排-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:gravity="center"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
            android:id="@+id/tv_times_01"
            style="@style/StylesBetTimesBtn0"
            android:layout_weight="1"
            android:text="@string/betting_01_times"/>

        <TextView
            android:id="@+id/tv_times_05"
            style="@style/StylesBetTimesBtn0"
            android:layout_weight="1"
            android:text="@string/betting_05_times"/>

        <TextView
            android:id="@+id/tv_times_08"
            style="@style/StylesBetTimesBtn0"
            android:layout_weight="1"
            android:text="@string/betting_08_times"/>

        <TextView
            android:id="@+id/tv_times_12"
            style="@style/StylesBetTimesBtn0"
            android:layout_weight="1"
            android:text="@string/betting_12_times"/>

        <TextView
            android:id="@+id/tv_times_clear"
            style="@style/StylesBetTimesBtn0"
            android:layout_weight="1"
            android:text="@string/betting_clear"/>

        <TextView
            android:id="@+id/tv_times_last"
            style="@style/StylesBetTimesBtn0"
            android:layout_weight="2"
            android:text="@string/betting_last_bet"/>
    </LinearLayout>

    <!--第二排-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:gravity="center"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
            android:id="@+id/tv_times_15"
            style="@style/StylesBetTimesBtn0"
            android:layout_weight="1"
            android:text="@string/betting_15_times"/>

        <TextView
            android:id="@+id/tv_times_20"
            style="@style/StylesBetTimesBtn0"
            android:layout_weight="1"
            android:text="@string/betting_20_times"/>

        <TextView
            android:id="@+id/tv_times_100"
            style="@style/StylesBetTimesBtn0"
            android:layout_weight="1"
            android:text="@string/betting_100_times"/>

        <TextView
            android:id="@+id/tv_times_500"
            style="@style/StylesBetTimesBtn0"
            android:layout_weight="1"
            android:text="@string/betting_500_times"/>

        <TextView
            android:id="@+id/tv_times_turn"
            style="@style/StylesBetTimesBtn0"
            android:layout_weight="1"
            android:text="@string/betting_bet_turn"/>

        <TextView
            android:id="@+id/tv_times_betall"
            style="@style/StylesBetTimesBtn0"
            android:layout_weight="2"
            android:text="@string/betting_betall"/>
    </LinearLayout>

    <View style="@style/StyleHorizontalLineView"/>

</LinearLayout>
