<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <!--第三排-->
    <LinearLayout
        android:id="@+id/ll_bet_type"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
            android:id="@+id/tv_times_quan"
            style="@style/StylesBetTimesBtn1"
            android:layout_weight="1"
            android:text="@string/betting_quanbao"/>

        <TextView
            android:id="@+id/tv_times_dan"
            style="@style/StylesBetTimesBtn1"
            android:layout_weight="1"
            android:text="@string/betting_dan"/>

        <TextView
            android:id="@+id/tv_times_shuang"
            style="@style/StylesBetTimesBtn1"
            android:layout_weight="1"
            android:text="@string/betting_shuang"/>

        <TextView
            android:id="@+id/tv_times_zhong"
            style="@style/StylesBetTimesBtn1"
            android:layout_weight="1"
            android:text="@string/betting_zhong"/>

        <TextView
            android:id="@+id/tv_times_bian"
            style="@style/StylesBetTimesBtn1"
            android:layout_weight="1"
            android:text="@string/betting_bian"/>

        <TextView
            android:id="@+id/tv_times_da"
            style="@style/StylesBetTimesBtn1"
            android:layout_weight="1"
            android:text="@string/betting_da"/>

        <TextView
            android:id="@+id/tv_times_xiao"
            style="@style/StylesBetTimesBtn1"
            android:layout_weight="1"
            android:text="@string/betting_xiao"/>

    </LinearLayout>

    <View
        style="@style/StyleHorizontalLineView"
        android:layout_height="16dp"/>
</LinearLayout>
